--- a/app/src/main/res/layout/lucky_wheel_layout.xml
+++ b/app/src/main/res/layout/lucky_wheel_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.aimardon.spinname.WheelView
+    <com.aimardon.spingame.WheelView
         android:id="@+id/wv_main_wheel"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
