--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.aimardon.spinname.MainActivity">
+    tools:context="com.aimardon.spingame.MainActivity">
 
-    <com.aimardon.spinname.LuckyWheel
+    <com.aimardon.spingame.LuckyWheel
         android:id="@+id/lwv"
         android:layout_width="300dp"
         android:layout_height="300dp"
