--- a/spingame/src/main/res/layout/lucky_wheel_layout.xml
+++ b/spingame/src/main/res/layout/lucky_wheel_layout.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.bluehomestudio.luckywheel.WheelView
+    <com.aimardon.spingame.LuckyWheel
         android:id="@+id/wv_main_wheel"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
